--- a/PROJECT 2/index.html
+++ b/PROJECT 2/index.html
@@ -45,4 +45,29 @@
         </section>
 
         <a class="view" href="#">View More...</a>
+
+        <section class="bar">
+            <img class="bird" src="assets/icons/bird.png">
+            <p>Get ready for something big. #nessst is coming! about 20 minutes ago...</p>
+        </section>
+
+        <footer>
+            <section class="nestfooter">
+            <img src="assets/logo.png">
+            <a class="about" href="#">ABOUT</a>
+            <a class="about" href="#">GALLERY</a>
+            <a class="about" href="#">DOCUMENTS</a>
+            </section>
+
+            <section class="looking">
+                <h3>LOOKING FOR SOMEONE?</h3>
+                <h4>Find who you're looking for</h4>
+            </section>
+
+            <section class="vcd">
+                <h3>VISUAL COMMUNICATION DESIGN</h3>
+                <p>A major in Visual Communication Design educates and prepares students to conceive and produce creative solutions to satisfy the visual communication needs of society.</p>
+                <h4>READ MORE...</h4>
+            </section>
+        </footer>
     
