--- a/PROJECT 2/index.html
+++ b/PROJECT 2/index.html
@@ -15,10 +15,14 @@
             </section>
 
             <section class="right">
-                <img class="social" src="assets/icons/facebook.png">
-                <img class="social" src="assets/icons/twitter.png">
-                <a class="login" href="#">LOGIN</a>
-                <a class="login" href="#">REGISTER</a>
+                <div>
+                    <img class="social" src="assets/icons/facebook.png">
+                    <img class="social" src="assets/icons/twitter.png">
+                </div>
+                <div>
+                    <a class="login" href="#">LOGIN</a>
+                    <a class="login" href="#">REGISTER</a>
+                </div>
             </section>
         </nav>
 
@@ -80,7 +84,7 @@
 
             
             <section class="minigallery">
-                <h3>VIEW GALLERY</h3>
+                <h3 class="viewgallery">VIEW GALLERY</h3>
                 <section class="pictures">
                     <div class="rowone">
                 <img src="https://ucarecdn.com/76660389-420a-4be5-85a0-96833f4765e0/-/resize/1680x/image.jpg">
