--- a/PROJECT 2/index.html
+++ b/PROJECT 2/index.html
@@ -27,7 +27,9 @@
         </nav>
 
         <header>
-            
+            <section class="overlay">    
+            </section>
+            <p class="student">Sophie Benson, Art Supply Drive</p>
             <img id="left-arrow" class="arrows" src="assets/arrows/left arrow.png">
             <img id="right-arrow" class="arrows" src="assets/arrows/right arrow.png">   
         </header>
