should be finished

--- a/PROJECT 2/index.html
+++ b/PROJECT 2/index.html
@@ -27,9 +27,11 @@
         </nav>
 
         <header>
-            <section class="overlay">    
+            
+            <section class="overlay">  
+                <p class="student">Sophie Benson, Art Supply Drive</p>  
             </section>
-            <p class="student">Sophie Benson, Art Supply Drive</p>
+            
             <img id="left-arrow" class="arrows" src="assets/arrows/left arrow.png">
             <img id="right-arrow" class="arrows" src="assets/arrows/right arrow.png">   
         </header>
@@ -54,7 +56,7 @@
 
         <section class="bar">
             <img class="bird" src="assets/icons/bird.png">
-            <p>Get ready for something big. #nessst is coming! about 20 minutes ago...</p>
+            <p>Get ready for something big. #nessst is coming! <p class="small">about 20 minutes ago...</p></p>
         </section>
 
         <footer>
